--- a/src/app/alimentoveganos/alimentoveganos.component.html
+++ b/src/app/alimentoveganos/alimentoveganos.component.html
@@ -10,57 +10,39 @@
     </ion-card-header>
     <div class="botones">
       <ion-button (click)="setOpenIngre(true)">Ver Ingredientes</ion-button>
-      <ion-button (click)="setOpen(true)">Ver Receta</ion-button>
+      <ion-button (click)="setOpen(true)">Ver Preparación</ion-button>
       <ion-button (click)="mostrarToast()">Crear Lista de Compra</ion-button>
       <ion-button (click)="abrirFormulario()">Editar Receta</ion-button>
       <ion-button (click)="eliminarReceta()">Eliminar Receta</ion-button>
       <app-Mitoast #miToast></app-Mitoast>
     </div>
   </ion-card>
+
   <ion-icon class="icon-compartir" name="git-compare-outline"></ion-icon>
+
   <ion-modal [isOpen]="AbrirReceta">
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Receta</ion-title>
+          <ion-title>Preparación</ion-title>
           <ion-buttons slot="end">
             <ion-button (click)="setOpen(false)">Cerrar</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <ion-list>
-          <ion-item>
-            <ion-label>1º Cocinar el pollo</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Sazona la pechuga de pollo con sal y pimienta.
-              Cocina a la plancha con un chorrito de aceite de oliva hasta que esté bien dorada por fuera y jugosa por dentro.
-              Deja reposar y corta en tiras.</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>2º Preparar la salsa César</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>En un bol mezcla: mayonesa, mostaza Dijon, ajo picado, jugo de limón y aceite de oliva.
-              Bate bien hasta que emulsione.
-              Ajusta de sal y pimienta al gusto.</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>3º Montar la ensalada</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Lava y seca bien la lechuga romana, corta en trozos medianos y colócala en un bowl grande.
-              Agrega el pollo en tiras, los crutones y la mitad del queso parmesano.</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>4º Aliñar y servir</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Vierte la salsa César sobre la ensalada y mezcla suavemente.
-              Espolvorea el resto del queso parmesano por encima.</ion-label>
-          </ion-item>
-        </ion-list>
+        <div class="preparacion-texto">
+          <!-- Usamos ng-container para el *ngIf -->
+          <ng-container *ngIf="receta.descripcion; else sinPreparacion">
+            <p>{{ receta.descripcion }}</p>
+          </ng-container>
+
+          <ng-template #sinPreparacion>
+            <p class="ion-text-center ion-padding">
+              No hay instrucciones de preparación disponibles para esta receta.
+            </p>
+          </ng-template>
+        </div>
       </ion-content>
     </ng-template>
   </ion-modal>
@@ -77,39 +59,19 @@
       </ion-header>
       <ion-content class="ion-padding">
         <ion-list>
-          <ion-item>
-            <ion-label>1 lechuga romana</ion-label>
+          <ion-item *ngFor="let ingrediente of receta?.ingredientes">
+            <ion-label>{{ ingrediente }}</ion-label>
           </ion-item>
-          <ion-item>
-            <ion-label>1 pechuga de pollo a la plancha</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>50 g de queso parmesano rallado</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>1 taza de crutones</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>3 cucharadas de mayonesa</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>1 cucharadita de mostaza Dijon</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>1 diente de ajo picado</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>2 cucharadas de jugo de limón</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>2 cucharadas de aceite de oliva</ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>Sal y pimienta al gusto</ion-label>
+
+          <ion-item *ngIf="!receta?.ingredientes || receta?.ingredientes?.length === 0">
+            <ion-label class="ion-text-center">
+              <p>No hay ingredientes asociados a esta receta.</p>
+            </ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
     </ng-template>
   </ion-modal>
+
 </ion-content>
 <app-footer></app-footer>
