--- a/src/app/formulario-editar/formulario-editar.component.html
+++ b/src/app/formulario-editar/formulario-editar.component.html
@@ -20,8 +20,8 @@
     </ion-item>
 
     <ion-item>
-      <ion-label position="stacked">Descripción</ion-label>
-      <ion-textarea [(ngModel)]="descripcion" name="descripcion"></ion-textarea>
+      <ion-label position="stacked">Pasos</ion-label>
+      <ion-textarea [(ngModel)]="descripcion" name="pasos"></ion-textarea>
     </ion-item>
 
     <ion-item>
