--- a/src/app/alimentoveganos/alimentoveganos.component.scss
+++ b/src/app/alimentoveganos/alimentoveganos.component.scss
@@ -26,3 +26,66 @@
   width: 10%;
   height: 10%;
 }
+
+.searchbar-personalizado {
+  --border-radius: 12px;
+  margin-bottom: 12px;
+}
+
+.lista-ingredientes-personalizada {
+  background: transparent;
+
+  .item-ingrediente {
+    --padding-start: 8px;
+    --inner-padding-end: 8px;
+    --min-height: 64px;
+    align-items: center;
+
+    .label-nombre {
+      flex: 1;
+      margin: 0 16px;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .input-cantidad {
+      width: 130px;
+      max-width: 140px;
+      text-align: right;
+
+      input {
+        text-align: right;
+        font-size: 15px;
+      }
+
+      --placeholder-color: var(--ion-color-medium);
+      --placeholder-opacity: 0.7;
+    }
+
+    ion-checkbox {
+      margin-right: 12px;
+    }
+  }
+}
+
+.texto-ayuda-modal {
+  font-size: 14px;
+  color: var(--ion-color-medium);
+  text-align: center;
+  margin: 8px 0 16px 0;
+}
+
+.contenedor-boton-guardar {
+  margin: 24px 16px 8px 16px;
+
+  ion-button {
+    --border-radius: 12px;
+    height: 48px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
+ion-content .ion-text-center.ion-padding {
+  color: var(--ion-color-medium);
+}
